--- a/src/components/Main.module.scss
+++ b/src/components/Main.module.scss
@@ -4,6 +4,8 @@
     width: 100%;
 }
 
+// Wrappers
+
 .controlWrapper {
     width: 30%;
     position: -webkit-sticky;
@@ -12,25 +14,44 @@
     height: 100vh;
     background: url('../../assets/images/background-cover.jpg') no-repeat #666666;
     background-size: cover;
-}
-
-.headerContentContainer {
-
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-start;
 }
 
 .contentWrapper {
     width: 70%;
 }
 
-.mainContentContainer {
+.controlWrapperOverlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(21, 23, 34, 0.8);
+    background-image: -webkit-linear-gradient(-410deg, rgba(61, 66, 96, 0.6) 20%, rgba(21, 23, 34, 0.8));
+    background-image: linear-gradient(140deg, rgba(61, 66, 96, 0.6) 20%, rgba(21, 23, 34, 0.8));
+    z-index: -1;
 }
 
-.headerContentContainer {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  justify-content: center;
-  flex: 1;
+// Containers
+
+.navigationContainer {
+    flex-grow: 1;
+}
+
+.siteFooterContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-start;
+}
+
+.mainContentContainer {
 }
 
 .footerContentContainer {
