--- a/src/components/SiteFooter.module.scss
+++ b/src/components/SiteFooter.module.scss
@@ -1,11 +1,35 @@
-.footerMessageWrapper {
+@import '../styles/fonts';
+@import '../styles/colors';
 
+.siteFooter {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    color: $gray55;
+    text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+    margin-left: 3.4em;
+    margin-right: 3.4em;
+    margin-bottom: 3.4em;
 }
 
-.footerMessageItem {
-
+.sloganItem {
+    margin-top: 2.8em;
+    margin-left: 0;
+    padding: 0;
 }
 
-.footerMessage {
+.sloganItem span {
+    font-size: 3em;
+    font-weight: 500;
+    line-height: 0.7em;
+}
 
+.copyrightItem {
+    margin-top: 3.4em;
+}
+
+.copyrightItem span {
+    font-size: 1.1em;
+    font-weight: 400;
+    line-height: 0.73em;
 }
