--- a/src/components/NavigationBar.module.scss
+++ b/src/components/NavigationBar.module.scss
@@ -7,9 +7,6 @@
     align-items: flex-end;
     color: $white;
     text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
-    margin-left: 3.4em;
-    margin-right: 3.4em;
-    margin-bottom: 3.4em;
     text-transform: uppercase;
 }
 
@@ -28,9 +25,9 @@
 }
 
 .siteTitle {
-    margin-top: 2.8em;
     margin-left: 0;
     flex-direction: row-reverse;
+    margin-bottom: 2.8em;
 }
 
 .siteTitle label {
@@ -44,11 +41,12 @@
 }
 
 .navigationContent ol {
+    margin: 0;
     list-style: none;
 }
 
 .navigationContent li {
-    margin-top: 2.8em;
+    margin-bottom: 2.8em;
     margin-left: 0;
     display: flex;
     flex-direction: row-reverse;
