--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -14,8 +14,9 @@ $slate:             #3D4260;
 $blue:              #2568A3;
 $catRed:            #BF1827;
 $shallowRed:        #CE404B;
+$lightRed:          #D95059;
 
-$primary-color:     $shallowRed;
+$primary-color:     $lightRed;
 $secondary-color:   #5BA4E5;
 
 $link-color:        $primary-color;
