--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,4 +4,5 @@ body {
     font-family: $font-ui-sans;
     font-size: 10px;
     font-weight: normal;
+    -webkit-font-smoothing : antialiased;
 }
