--- a/src/components/Main.module.scss
+++ b/src/components/Main.module.scss
@@ -7,69 +7,71 @@
 // Wrappers
 
 .controlWrapper {
-    width: 30%;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-    height: 100vh;
+    align-items: flex-end;
     background: url('../../assets/images/background-cover.jpg') no-repeat #666666;
     background-size: cover;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    height: 100vh;
     justify-content: flex-start;
+    position: fixed;
+    top: 0;
+    width: 30%;
 }
 
 .contentWrapper {
-    width: 70%;
+    align-items: flex-start;
     display: flex;
     flex-direction: column;
+    height: 100vh;
+    justify-content: flex-start;
+    margin-left: 30%;
+    width: 70%;
 }
 
 .controlWrapperOverlay {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
     background-color: rgba(21, 23, 34, 0.8);
-    background-image: -webkit-linear-gradient(-410deg, rgba(61, 66, 96, 0.6) 20%, rgba(21, 23, 34, 0.8));
     background-image: linear-gradient(140deg, rgba(61, 66, 96, 0.6) 20%, rgba(21, 23, 34, 0.8));
+    bottom: 0;
+    height: 100%;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 100%;
     z-index: -1;
 }
 
-// Containers
+// Control Containers
 
 .navigationContainer {
     flex-grow: 1;
+    flex-shrink: 0;
+    margin-left: 3.4em;
+    margin-right: 3.4em;
     margin-top: 3.4em;
+}
+
+.siteFooterContainer {
+    margin-bottom: 3.4em;
     margin-left: 3.4em;
     margin-right: 3.4em;
 }
 
-.siteFooterContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: flex-start;
-    margin-left: 3.4em;
-    margin-right: 3.4em;
-    margin-bottom: 3.4em;
-}
+// Content Containers
 
 .mainContentContainer {
     display: flex;
     flex-direction: row;
-    max-width: 77%;
+    flex-grow: 1;
+    flex-shrink: 0;
     margin-left: 5.5em;
     margin-right: 5.5em;
-    flex-grow: 1;
+    max-width: 77%;
 }
 
 .footerContentContainer {
-    max-width: 77%;
     margin-left: 5.5em;
     margin-right: 5.5em;
+    max-width: 77%;
 }
