--- a/src/components/NavigationBar.module.scss
+++ b/src/components/NavigationBar.module.scss
@@ -6,7 +6,7 @@
     flex-direction: column;
     align-items: flex-end;
     color: $white;
-    text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
     text-transform: uppercase;
 }
 
@@ -21,6 +21,17 @@
         height: 0.7em;
         background: $white;
         margin-left: 0.77em;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    }
+
+    &:hover {
+        color: $primary-color;
+        transition: color .3s;
+
+        &:after {
+            background: $primary-color;
+            transition: background .3s;
+        }
     }
 }
 
@@ -32,7 +43,6 @@
 
 .siteTitle label {
     font-size: 3em;
-    font-weight: 500;
     line-height: 0.7em;
 }
 
@@ -54,6 +64,5 @@
 
 .navigationItem {
     font-size: 3em;
-    font-weight: 500;
     line-height: 0.7em;
 }
