--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,4 +1,4 @@
-$font-ui-sans:               -apple-system, "Helvetica Neue", "Helvetica", "Roboto", "Source Sans Pro", "Source Han Sans", "Noto Sans TC", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;;
-$font-body-sans:             -apple-system, "Helvetica Neue", "Helvetica", "Roboto", "Source Sans Pro", "Source Han Sans", "Noto Sans TC", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
-$font-body-serif:            "Palatino", "Libre Baskerville", "Source Han Serif", "Noto Serif", "Noto Serif TC", "Times New Roman", serif;
-$font-body-monospaced:       "SF Mono", Menlo, Monaco, "Source Code Pro", "Courier New", monospace, serif;
+$font-ui-sans:               -apple-system, "Roboto", sans-serif;;
+$font-body-sans:             -apple-system, "Roboto", sans-serif;
+$font-body-serif:            "Palatino", "Gentium Book Basic", "Times New Roman", serif;
+$font-body-monospaced:       "SF Mono", Menlo, "Roboto Mono", "Courier New", monospace, serif;
