Refactors the data structure.

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,33 +1,34 @@
-$gray-lightest:     #F8F8F8;
-$gray-lighter:      #EEEEEE;
-$gray-light:        #DDDDDD;
-$gray:              #CCCCCC;
-$gray-dark:         #999999;
-$gray-darker:       #666666;
-$gray-darkest:      #333333;
+$gray-lightest:     #f8f8f8;
+$gray-lighter:      #eee;
+$gray-light:        #ddd;
+$gray:              #ccc;
+$gray-dark:         #999;
+$gray-darker:       #666;
+$gray-darkest:      #333;
 
-$green:             #156F78;
+$green:             #156f78;
 $purple:            #493252;
-$red:               #E25440;
-$orange:            #FB9C50;
-$slate:             #3D4260;
-$blue:              #2568A3;
-$catRed:            #BF1827;
-$shallowRed:        #CE404B;
-$lightRed:          #D95059;
+$red:               #e25440;
+$orange:            #fb9c50;
+$slate:             #3d4260;
+$blue:              #2568a3;
+$cat-red:           #bf1827;
+$shallow-red:       #ce404b;
+$light-red:         #d95059;
 
-$primary-color:     $lightRed;
-$secondary-color:   #5BA4E5;
+$primary-color:     $light-red;
+$secondary-color:   #5ba4e5;
 
 $link-color:        $primary-color;
 $hover-color:       darken($link-color, 15%);
 $body-color:        darken($gray-darker, 30%);
 
-$black:             #000000;
-$gray8:             #141414;
-$gray13:            #212121;
-$gray21:            #363636;
-$gray34:            #575757;
-$gray55:            #8C8C8C;
-$gray89:            #E3E3E3;
-$white:             #FFF;
+$black:             #000;
+$white:             #fff;
+$gray-8:            #141414;
+$gray-13:           #212121;
+$gray-21:           #363636;
+$gray-34:           #575757;
+$gray-55:           #8c8c8c;
+$gray-89:           #e3e3e3;
+
