--- a/src/components/Main.module.scss
+++ b/src/components/Main.module.scss
@@ -1,3 +1,5 @@
+@import '../styles/colors';
+
 .appContainer {
     display: flex;
     flex-direction: row;
@@ -8,7 +10,7 @@
 
 .controlWrapper {
     align-items: flex-end;
-    background: url('../../assets/images/background-cover.jpg') no-repeat #666666;
+    background: url('../../assets/images/background-cover.jpg') no-repeat $gray-8;
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -30,7 +32,7 @@
 }
 
 .controlWrapperOverlay {
-    background-color: rgba(21, 23, 34, 0.8);
+    background-color: transparentize($slate, .8);
     background-image: linear-gradient(140deg, rgba(61, 66, 96, 0.6) 20%, rgba(21, 23, 34, 0.8));
     bottom: 0;
     height: 100%;
