Adjusts scss files's coding style.

--- a/src/styles/webfonts.scss
+++ b/src/styles/webfonts.scss
@@ -1,93 +1,93 @@
-/*---------------------------------------------------------------------------*
- * SF Mono
- *---------------------------------------------------------------------------*/
+//
+// SF Mono
+//
 
-/** Bold */
+// Bold
 @font-face {
-    font-family: "SF Mono";
+    font-family: 'SF Mono';
     font-weight: 700;
-    src: url("https://sf.abarba.me/SFMono-Bold.otf");
+    src: url('https://sf.abarba.me/SFMono-Bold.otf');
 }
 
-/** Bold Italic */
+// Bold Italic
 @font-face {
-    font-family: "SF Mono";
+    font-family: 'SF Mono';
     font-weight: 700;
     font-style: italic;
-    src: url("https://sf.abarba.me/SFMono-BoldItalic.otf");
+    src: url('https://sf.abarba.me/SFMono-BoldItalic.otf');
 }
 
-/** Heavy */
+// Heavy
 @font-face {
-    font-family: "SF Mono";
+    font-family: 'SF Mono';
     font-weight: 800;
-    src: url("https://sf.abarba.me/SFMono-Heavy.otf");
+    src: url('https://sf.abarba.me/SFMono-Heavy.otf');
 }
 
-/** Heavy Italic */
+// Heavy Italic
 @font-face {
-    font-family: "SF Mono";
+    font-family: 'SF Mono';
     font-weight: 800;
     font-style: italic;
-    src: url("https://sf.abarba.me/SFMono-HeavyItalic.otf");
+    src: url('https://sf.abarba.me/SFMono-HeavyItalic.otf');
 }
 
-/** Light */
+// Light
 @font-face {
-    font-family: "SF Mono";
+    font-family: 'SF Mono';
     font-weight: 200;
-    src: url("https://sf.abarba.me/SFMono-Light.otf");
+    src: url('https://sf.abarba.me/SFMono-Light.otf');
 }
 
-/** Light Italic */
+// Light Italic
 @font-face {
-    font-family: "SF Mono";
+    font-family: 'SF Mono';
     font-weight: 200;
     font-style: italic;
-    src: url("https://sf.abarba.me/SFMono-HeavyItalic.otf");
+    src: url('https://sf.abarba.me/SFMono-HeavyItalic.otf');
 }
 
-/** Medium */
+// Medium
 @font-face {
-    font-family: "SF Mono";
+    font-family: 'SF Mono';
     font-weight: 500;
-    src: url("https://sf.abarba.me/SFMono-Medium.otf");
+    src: url('https://sf.abarba.me/SFMono-Medium.otf');
 }
 
-/** Medium Italic */
+// Medium Italic
 @font-face {
-    font-family: "SF Mono";
+    font-family: 'SF Mono';
     font-weight: 500;
     font-style: italic;
-    src: url("https://sf.abarba.me/SFMono-MediumItalic.otf");
+    src: url('https://sf.abarba.me/SFMono-MediumItalic.otf');
 }
 
-/** Regular */
+// Regular
 @font-face {
-    font-family: "SF Mono";
+    font-family: 'SF Mono';
     font-weight: 400;
-    src: url("https://sf.abarba.me/SFMono-Regular.otf");
+    src: url('https://sf.abarba.me/SFMono-Regular.otf');
 }
 
-/** Regular Italic */
+// Regular Italic
 @font-face {
-    font-family: "SF Mono";
+    font-family: 'SF Mono';
     font-weight: 400;
     font-style: italic;
-    src: url("https://sf.abarba.me/SFMono-RegularItalic.otf");
+    src: url('https://sf.abarba.me/SFMono-RegularItalic.otf');
 }
 
-/** Semibold */
+// Semi-bold
 @font-face {
-    font-family: "SF Mono";
+    font-family: 'SF Mono';
     font-weight: 600;
-    src: url("https://sf.abarba.me/SFMono-Semibold.otf");
+    src: url('https://sf.abarba.me/SFMono-Semibold.otf');
 }
 
-/** Semibold Italic */
+// Semi-bold Italic
 @font-face {
-    font-family: "SF Mono";
+    font-family: 'SF Mono';
     font-weight: 600;
     font-style: italic;
-    src: url("https://sf.abarba.me/SFMono-SemiboldItalic.otf");
+    src: url('https://sf.abarba.me/SFMono-SemiboldItalic.otf');
 }
