--- a/src/components/TimeLabel.module.scss
+++ b/src/components/TimeLabel.module.scss
@@ -1,7 +1,7 @@
 @import '../styles/colors';
 
 .time {
-    color: $gray-55;
+    color: $color-ui-caption-label;
     font-size: 1.1em;
     font-weight: 500;
     line-height: 1.18em;
