--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,4 +1,4 @@
-$font-ui-sans:               -apple-system, "Roboto", sans-serif;;
-$font-body-sans:             -apple-system, "Roboto", sans-serif;
-$font-body-serif:            "Palatino", "Gentium Book Basic", "Times New Roman", serif;
-$font-body-monospaced:       "SF Mono", Menlo, "Roboto Mono", "Courier New", monospace, serif;
+$font-ui-sans:               -apple-system, "Roboto", sans-serif;
+$font-text-sans:             -apple-system, "Roboto", sans-serif;
+$font-text-serif:            "Palatino", "Gentium Book Basic", serif;
+$font-text-monospaced:       "SF Mono", "Roboto Mono", monospace;
