--- a/src/components/PostExcerpt.module.scss
+++ b/src/components/PostExcerpt.module.scss
@@ -2,12 +2,8 @@
 @import '../styles/colors';
 
 .postExcerptItem {
-    margin-bottom: 5.5em;
+    margin-bottom: 5.1em;
     margin-top: 0;
-
-    &:first-child {
-        margin-top: 5.1em;
-    }
 
     &:last-child {
         margin-bottom: 0;
@@ -16,41 +12,77 @@
 
 .postExcerptHeader {
     a {
-        text-decoration: none;
-    }
+        h1,
+        h2 {
+            margin: 0;
+            display: inline-block;
+            transition: color 0.3s ease-in-out;
+        }
 
-    h1 {
-        color: $gray-21;
-        display: inline-block;
-        font-size: 1.8em;
-        line-height: 1.17em;
-        margin: 0;
-    }
+        h1 {
+            color: $color-ui-main-headline-primary;
+            font-size: 2.4em;
+            line-height: 0.875;
+        }
 
-    h2 {
-        display: inline-block;
-        font-size: 1.1em;
-        line-height: 1.18em;
-        margin: 0;
+        h2 {
+            color: $color-ui-main-headline-secondary;
+            font-size: 1.5em;
+            line-height: 1.2;
+        }
+
+        &:visited {
+            h1 {
+                color: $color-ui-main-headline-primary;
+            }
+
+            h2 {
+                color: $color-ui-main-headline-secondary;
+            }
+        }
+
+        &:hover,
+        &:visited:hover {
+            h1,
+            h2 {
+                color: $color-hover;
+                transition: color 0.3s ease-in-out;
+            }
+        }
     }
 }
 
 .postExcerptBody {
-    margin-top: 1.1em;
+    margin-top: 1.2em;
 
     a {
-        color: $gray-55;
         text-decoration: none;
-    }
 
-    p {
-        font-family: $font-body-serif;
-        font-size: 1.8em;
-        line-height: 1.61em;
-        margin: 0;
+        p {
+            color: $color-content-summary;
+            font-family: $font-text-serif;
+            font-size: 1.7em;
+            line-height: 2;
+            margin: 0;
+            transition: color 0.3s ease-in-out;
+        }
+
+        &:visited {
+            p {
+                color: $color-content-summary;
+            }
+        }
+
+        &:hover,
+        &:visited:hover {
+            p {
+                color: $color-hover;
+                transition: color 0.3s ease-in-out;
+            }
+        }
     }
 }
 
 .postExcerptFooter {
-    margin-top: 2.2em;
+    margin-top: 2.5em;
 }
