--- a/src/components/PostExcerpt.module.scss
+++ b/src/components/PostExcerpt.module.scss
@@ -2,7 +2,7 @@
 @import '../styles/colors';
 
 .postExcerptItem {
-    margin-bottom: 5.1em;
+    margin-bottom: 5.1rem;
     margin-top: 0;
 
     &:last-child {
@@ -52,7 +52,7 @@
     }
 
     .postExcerptBody {
-        margin-top: 1.2em;
+        margin-top: 1.2rem;
 
         p {
             a {
@@ -78,6 +78,6 @@
     }
 
     .postExcerptFooter {
-        margin-top: 2.5em;
+        margin-top: 2.5rem;
     }
 }
