--- a/src/components/SiteFooter.module.scss
+++ b/src/components/SiteFooter.module.scss
@@ -8,10 +8,10 @@
     color: $color-ui-nav-footnote;
     text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
     text-align: end;
-    padding-top: 1.7em;
-    padding-left: 3.4em;
-    padding-right: 3.4em;
-    padding-bottom: 3.1em;
+    padding-top: 1.7rem;
+    padding-left: 3.4rem;
+    padding-right: 3.4rem;
+    padding-bottom: 3.1rem;
 
     .sloganItem {
         margin: 0;
@@ -25,7 +25,7 @@
     }
 
     .copyrightItem {
-        margin-top: 1.5em;
+        margin-top: 1.5rem;
 
         span {
             font-size: 1.1em;
