--- a/src/components/TimeLabel.module.scss
+++ b/src/components/TimeLabel.module.scss
@@ -4,6 +4,6 @@
     color: $color-ui-caption-label;
     font-size: 1.1em;
     font-weight: 500;
-    line-height: 1.18em;
+    line-height: 1.18;
     text-transform: uppercase;
 }
