--- a/src/components/ContentFooter.module.scss
+++ b/src/components/ContentFooter.module.scss
@@ -1,14 +1,14 @@
 @import '../styles/colors';
 
 .contentFooter {
-    padding-left: 5.5em;
-    padding-right: 5.5em;
-    padding-top: 5.3em;
-    padding-bottom: 5.2em;
+    padding-left: 5.5rem;
+    padding-right: 5.5rem;
+    padding-top: 5.3rem;
+    padding-bottom: 5.2rem;
 }
 
 .contentFooterItem {
-    margin-bottom: 0.8em;
+    margin-bottom: 0.8rem;
 
     &:last-child {
         margin-bottom: 0;
@@ -18,7 +18,7 @@
         color: $color-ui-footnote;
         font-size: 1.1em;
         font-weight: 400;
-        line-height: 1.18em;
+        line-height: 1.18;
 
         a {
             color: $color-ui-footnote;
