--- a/src/components/Main.module.scss
+++ b/src/components/Main.module.scss
@@ -1,8 +1,6 @@
 @import '../styles/colors';
 
 .appContainer {
-    display: flex;
-    flex-direction: row;
     width: 100%;
 }
 
@@ -42,7 +40,6 @@
     justify-content: flex-start;
     margin-left: 30%;
     width: 61.8%;
-    min-width: 890px;
 }
 
 // Control Containers
@@ -68,12 +65,12 @@
 
 .contentSeparator {
     display: flex;
-    margin-left: 5.5em;
-    margin-right: 5.5em;
+    margin-left: 5.5rem;
+    margin-right: 5.5rem;
     margin-top: 0;
     margin-bottom: 0;
     padding: 0;
-    width: calc(100% - 11em);
+    width: calc(100% - 11rem);
     border: 0;
     border-top: 1px solid $_gray-89;
 }
