--- a/src/components/Taxonomy.module.scss
+++ b/src/components/Taxonomy.module.scss
@@ -16,9 +16,13 @@
     display: inline-block;
 
     &::after {
-        content: '|';
+        content: "";
+        display: inline-block;
+        width: 0.1rem;
+        height: 0.8rem;
         margin-left: 0.5rem;
         margin-right: 0.5rem;
+        background: $color-ui-caption-separator;
     }
 }
 
@@ -31,6 +35,10 @@
 .taxonomyItem {
     display: inline-block;
     margin: 0;
-    margin-right: 0.5rem;
+    margin-right: 0.8rem;
     padding: 0;
+
+    &:last-child {
+        margin-right: 0;
+    }
 }
