--- a/src/components/PostExcerpt.module.scss
+++ b/src/components/PostExcerpt.module.scss
@@ -30,7 +30,8 @@
                 font-size: 1.5em;
                 font-weight: 400;
                 line-height: 1.2;
-                margin-left: 1.3rem;
+                margin-left: 0.8rem;
+                vertical-align: 0.1rem;
             }
 
             &:visited {
