--- a/src/components/SourceCode.module.scss
+++ b/src/components/SourceCode.module.scss
@@ -7,12 +7,16 @@
 
     font-family: $font-text-monospaced;
     font-size: 0.88em;
+    font-weight: 400;
     line-height: 1.2;
     padding-top: 3.1rem;
     padding-bottom: 3.3rem;
     padding-left: 2.1rem;
     padding-right: 2.1rem;
     margin-bottom: 4.9rem;
+
+    background-color: $color-content-code-block-background;
+    overflow-x: scroll;
 
     .lineNumberList {
         display: inline-block;
@@ -40,6 +44,8 @@
 
     .codeContent {
         display: inline-block;
+        padding-right: 3.4rem;
+        color: $color-content-body;
 
         .line {
             margin-bottom: 0.9rem;
