--- a/src/components/Main.module.scss
+++ b/src/components/Main.module.scss
@@ -29,7 +29,7 @@
     right: 0;
     top: 0;
     width: 100%;
-    z-index: -1;
+    z-index: -2;
 }
 
 .contentWrapper {
@@ -47,9 +47,21 @@
 .navigationContainer {
     flex-grow: 1;
     flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    padding-top: 2.6rem;
+    padding-right: 3.4rem;
+    padding-left: 5.5rem;
+    padding-bottom: 6.1rem;
+    width: calc(100% - 8.9rem);
 }
 
 .siteFooterContainer {
+    bottom: 0;
+    position: absolute;
+    z-index: -1;
 }
 
 // Content Containers
