--- a/src/components/NavigationBar.module.scss
+++ b/src/components/NavigationBar.module.scss
@@ -73,5 +73,34 @@
             font-weight: 400;
             line-height: 1.13;
         }
+
+        .selected {
+            color: $color-ui-nav-headline-selected;
+
+            a {
+                color: $color-ui-nav-headline-selected;
+
+                &::after {
+                    color: $color-ui-nav-headline-selected;
+                }
+
+                &:visited {
+                    color: $color-ui-nav-headline-selected;
+
+                    &::after {
+                        background: $color-ui-nav-headline-selected;
+                    }
+                }
+
+                &:hover,
+                &:visited:hover {
+                    color: $color-hover;
+
+                    &::after {
+                        background: $color-hover;
+                    }
+                }
+            }
+        }
     }
 }
